out.txt
file:///C:/Projects/hare%20krishna/server.js:8
import YoutubeTranscriptPkg from 'youtube-transcript';
       ^^^^^^^^^^^^^^^^^^^^
SyntaxError: The requested module 'youtube-transcript' does not provide an export named 'default'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:220:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:321:5)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:644:26)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:117:5)

Node.js v22.17.0
